# databricks-mcp-server

./: .env.example  .gitignore  Claude_Review.md  README.md  pyproject.toml
src/databricks_mcp/: __init__.py  config.py  logging_config.py  security.py  server.py  validation.py
src/databricks_mcp/resources/: __init__.py  workspace.py
src/databricks_mcp/tools/: __init__.py  clusters.py  dbfs.py  jobs.py  notebooks.py  sql.py  unity_catalog.py
tests/: __init__.py  test_security.py  test_tools.py
